--- a/Zeus/ViewControllers/活动/ClientInviteVC.storyboard
+++ b/Zeus/ViewControllers/活动/ClientInviteVC.storyboard
@@ -25,7 +25,7 @@
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <color key="tintColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" priority="250" constant="2" id="GsO-9q-xBi"/>
+                                            <constraint firstAttribute="height" constant="2" id="GsO-9q-xBi"/>
                                         </constraints>
                                         <color key="progressTintColor" red="0.33725490200000002" green="0.58039215690000001" blue="0.87843137250000003" alpha="1" colorSpace="calibratedRGB"/>
                                     </progressView>
