--- a/Zeus/ViewControllers/活动/ActivityDetailVC.storyboard
+++ b/Zeus/ViewControllers/活动/ActivityDetailVC.storyboard
@@ -19,7 +19,12 @@
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Qcf-Vu-lNL">
                                 <rect key="frame" x="0.0" y="64" width="375" height="603"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <inset key="separatorInset" minX="30" minY="0.0" maxX="25" maxY="0.0"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="DVi-cY-wo6" id="cvA-6b-VQ0"/>
+                                    <outlet property="delegate" destination="DVi-cY-wo6" id="QEe-zK-aXC"/>
+                                </connections>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -44,6 +49,9 @@
                     </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <connections>
+                        <outlet property="tableView" destination="Qcf-Vu-lNL" id="b2p-eN-nxH"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="byV-5Y-cJp" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
