--- a/Zeus/Base.lproj/ClientTypeVC.storyboard
+++ b/Zeus/Base.lproj/ClientTypeVC.storyboard
@@ -5,7 +5,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <scenes>
-        <!--Client TypeVC-->
+        <!--客户类型-->
         <scene sceneID="w0F-nv-PTh">
             <objects>
                 <viewController storyboardIdentifier="ClientTypeVC" id="KHv-g8-esf" customClass="ClientTypeVC" customModule="Zeus" customModuleProvider="target" sceneMemberID="viewController">
@@ -16,8 +16,34 @@
                     <view key="view" contentMode="scaleToFill" id="aHg-DJ-M8Z">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="MoL-bG-4dB">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <searchBar key="tableHeaderView" contentMode="redraw" id="QxS-Da-0oT">
+                                    <rect key="frame" x="0.0" y="64" width="375" height="44"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                    <textInputTraits key="textInputTraits"/>
+                                </searchBar>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="MoL-bG-4dB" firstAttribute="leading" secondItem="aHg-DJ-M8Z" secondAttribute="leading" id="DKF-9S-BBW"/>
+                            <constraint firstAttribute="trailing" secondItem="MoL-bG-4dB" secondAttribute="trailing" id="Lu7-3u-udJ"/>
+                            <constraint firstItem="lqn-P5-9NO" firstAttribute="top" secondItem="MoL-bG-4dB" secondAttribute="bottom" id="NG0-8x-Ubg"/>
+                            <constraint firstItem="MoL-bG-4dB" firstAttribute="top" secondItem="G6I-Cz-pks" secondAttribute="bottom" id="yj8-qO-dH7"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="客户类型" id="p5U-UK-r7C">
+                        <barButtonItem key="rightBarButtonItem" style="done" id="skK-Pg-oRq">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="UgY-zN-nix">
+                                <rect key="frame" x="335" y="10" width="24" height="24"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" image="activity_add"/>
+                            </button>
+                        </barButtonItem>
+                    </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                 </viewController>
@@ -26,4 +52,7 @@
             <point key="canvasLocation" x="-715.5" y="592.5"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="activity_add" width="24" height="24"/>
+    </resources>
 </document>
